mysql/autopol-ingress-mrdzgeondmhnkjo-gl2etyd.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-mrdzgeondmhnkjo-ea6uvu1
  namespace: explorer
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
			controller-revision-hash: mysql-fbf7c789
			helm.sh/chart: mysql-9.1.2
			statefulset.kubernetes.io/pod-name: mysql-0
			app.kubernetes.io/instance: mysql
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: knoxautopolicy
  namespace: explorer
